--- a/contato.html
+++ b/contato.html
@@ -29,7 +29,7 @@
           <span class="sr-only">Menu</span>
         </button>
         <ul class="menu" id="menu">
-          <li><a href="index.html" class="active" aria-current="page">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="especialidades.html">Especialidades</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
