--- a/devs.html
+++ b/devs.html
@@ -17,18 +17,19 @@
 
 <body>
   <header class="header">
-    <!-- Mesmo header das outras páginas -->
     <div class="container">
       <a href="index.html" class="logo">
-        <img src="./img/MEDISCAM-LOGO.webp" alt="MediScam" width="150" height="50">
+        <img src="./img/MEDISCAM-LOGO.webp" alt="MediScam" width="502" height="392" loading="lazy">
         <span class="logo-text">MediScam</span>
       </a>
-      <nav class="nav">
-        <button class="menu-mobile" aria-label="Menu">
+      <nav class="nav" aria-label="Navegação principal">
+        <button class="menu-mobile" aria-label="Abrir Menu" aria-haspopup="true" aria-controls="menu"
+          aria-expanded="false">
           <span class="hamburger"></span>
+          <span class="sr-only">Menu</span>
         </button>
-        <ul class="menu">
-          <li><a href="index.html">Home</a></li>
+        <ul class="menu" id="menu">
+          <li><a href="index.html" class="active" aria-current="page">Home</a></li>
           <li><a href="especialidades.html">Especialidades</a></li>
           <li><a href="contato.html">Contato</a></li>
         </ul>
