--- a/devs.html
+++ b/devs.html
@@ -54,7 +54,7 @@
             <div class="dev-photo">
               <img src="./img/JACARE-PERFIL-PEDRO.webp" alt="Pedro Ruan" width="10253" height="6241" loading="lazy">
               <div class="dev-social">
-                <a href="https://github.com/Pedro1274" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/Pedro1274" aria-label="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
               </div>
             </div>
             <div class="dev-info">
@@ -74,7 +74,7 @@
           <div class="dev-card">
             <div class="dev-photo">
               <div class="dev-social">
-                <a href="https://github.com/zaclauro" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://github.com/zaclauro" aria-label="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github"></i></a>
               </div>
             </div>
             <div class="dev-info">
